--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,52 @@
 @charset "UTF-8";
+@font-face {
+  font-family: "RobotoRegular";
+  font-style: normal;
+  font-weight: normal;
+  src: url("../fonts/RobotoRegular/RobotoRegular.eot?#iefix") format("embedded-opentype"), url("../fonts/RobotoRegular/RobotoRegular.woff") format("woff"), url("../fonts/RobotoRegular/RobotoRegular.ttf") format("truetype"); }
+
+@font-face {
+  font-family: "RobotoBold";
+  font-style: normal;
+  font-weight: normal;
+  src: url("../fonts/RobotoBold/RobotoBold.eot?#iefix") format("embedded-opentype"), url("../fonts/RobotoBold/RobotoBold.woff") format("woff"), url("../fonts/RobotoBold/RobotoBold.ttf") format("truetype"); }
+
+@font-face {
+  font-family: "RobotoBlack";
+  font-style: normal;
+  font-weight: normal;
+  src: url("../fonts/RobotoBlack/RobotoBlack.eot?#iefix") format("embedded-opentype"), url("../fonts/RobotoBlack/RobotoBlack.woff") format("woff"), url("../fonts/RobotoBlack/RobotoBlack.ttf") format("truetype"); }
+
+@font-face {
+  font-family: "RobotoLight";
+  font-style: normal;
+  font-weight: normal;
+  src: url("../fonts/RobotoLight/RobotoLight.eot?#iefix") format("embedded-opentype"), url("../fonts/RobotoLight/RobotoLight.woff") format("woff"), url("../fonts/RobotoLight/RobotoLight.ttf") format("truetype"); }
+
+@font-face {
+  font-family: "RobotoThin";
+  font-style: normal;
+  font-weight: normal;
+  src: url("../fonts/RobotoThin/RobotoThin.eot?#iefix") format("embedded-opentype"), url("../fonts/RobotoThin/RobotoThin.woff") format("woff"), url("../fonts/RobotoThin/RobotoThin.ttf") format("truetype"); }
+
+@font-face {
+  font-family: "BebasBold";
+  font-style: normal;
+  font-weight: normal;
+  src: url("../fonts/BebasBold/BebasBold.eot?#iefix") format("embedded-opentype"), url("../fonts/BebasBold/BebasBold.woff") format("woff"), url("../fonts/BebasBold/BebasBold.ttf") format("truetype"); }
+
+@font-face {
+  font-family: "BebasRegular";
+  font-style: normal;
+  font-weight: normal;
+  src: url("../fonts/BebasRegular/BebasRegular.eot?#iefix") format("embedded-opentype"), url("../fonts/BebasRegular/BebasRegular.woff") format("woff"), url("../fonts/BebasRegular/BebasRegular.ttf") format("truetype"); }
+
+@font-face {
+  font-family: "Stolzl";
+  font-style: normal;
+  font-weight: normal;
+  src: url("../fonts/Stolzl/Stolzl-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/Stolzl/Stolzl-Light.woff") format("woff"), url("../fonts/Stolzl/Stolzl-Light.ttf") format("truetype"); }
+
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -1360,54 +1408,6 @@ img.mfp-img {
   .mfp-container {
     padding-left: 6px;
     padding-right: 6px; } }
-
-@font-face {
-  font-family: "RobotoRegular";
-  font-style: normal;
-  font-weight: normal;
-  src: url("../fonts/RobotoRegular/RobotoRegular.eot?#iefix") format("embedded-opentype"), url("../fonts/RobotoRegular/RobotoRegular.woff") format("woff"), url("../fonts/RobotoRegular/RobotoRegular.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "RobotoBold";
-  font-style: normal;
-  font-weight: normal;
-  src: url("../fonts/RobotoBold/RobotoBold.eot?#iefix") format("embedded-opentype"), url("../fonts/RobotoBold/RobotoBold.woff") format("woff"), url("../fonts/RobotoBold/RobotoBold.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "RobotoBlack";
-  font-style: normal;
-  font-weight: normal;
-  src: url("../fonts/RobotoBlack/RobotoBlack.eot?#iefix") format("embedded-opentype"), url("../fonts/RobotoBlack/RobotoBlack.woff") format("woff"), url("../fonts/RobotoBlack/RobotoBlack.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "RobotoLight";
-  font-style: normal;
-  font-weight: normal;
-  src: url("../fonts/RobotoLight/RobotoLight.eot?#iefix") format("embedded-opentype"), url("../fonts/RobotoLight/RobotoLight.woff") format("woff"), url("../fonts/RobotoLight/RobotoLight.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "RobotoThin";
-  font-style: normal;
-  font-weight: normal;
-  src: url("../fonts/RobotoThin/RobotoThin.eot?#iefix") format("embedded-opentype"), url("../fonts/RobotoThin/RobotoThin.woff") format("woff"), url("../fonts/RobotoThin/RobotoThin.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "BebasBold";
-  font-style: normal;
-  font-weight: normal;
-  src: url("../fonts/BebasBold/BebasBold.eot?#iefix") format("embedded-opentype"), url("../fonts/BebasBold/BebasBold.woff") format("woff"), url("../fonts/BebasBold/BebasBold.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "BebasRegular";
-  font-style: normal;
-  font-weight: normal;
-  src: url("../fonts/BebasRegular/BebasRegular.eot?#iefix") format("embedded-opentype"), url("../fonts/BebasRegular/BebasRegular.woff") format("woff"), url("../fonts/BebasRegular/BebasRegular.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Stolzl";
-  font-style: normal;
-  font-weight: normal;
-  src: url("../fonts/Stolzl/Stolzl-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/Stolzl/Stolzl-Light.woff") format("woff"), url("../fonts/Stolzl/Stolzl-Light.ttf") format("truetype"); }
 
 * {
   -webkit-box-sizing: border-box;
@@ -4786,7 +4786,8 @@ button.mfp-close {
       width: calc(100% - 16px); } }
   .title-wrapper--assortment h1 {
     margin-bottom: 50px;
-    text-align: left; }
+    text-align: left;
+    letter-spacing: -.1px; }
   .title-wrapper--assortment .button {
     margin-bottom: 30px; }
     .title-wrapper--assortment .button:before {
@@ -5327,6 +5328,15 @@ footer {
     display: inline; }
   span.paragraph {
     display: inline; }
+  ::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+    height: 7px; }
+  ::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 4px;
+            border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, 0.5); }
   /*Disable Animation on Mobile Devices*/ }
 
 /* Extra Small Devices, Phones */
@@ -5468,7 +5478,7 @@ footer {
   .header-button-popup .form-bottom label {
     margin-left: 0; }
   .assortment__table-wrap {
-    overflow: auto; }
+    overflow: scroll; }
     .assortment__table-wrap table {
       width: 480px; }
   .assortment-cover {
