--- a/css/main.css
+++ b/css/main.css
@@ -1486,7 +1486,8 @@ h1, h2 {
   text-transform: uppercase;
   font-size: 53px;
   line-height: 56px;
-  font-weight: 700; }
+  font-weight: 700;
+  letter-spacing: -1px; }
   h1.white, h2.white {
     color: #fff; }
   h1.manual-title, h2.manual-title {
