--- a/css/main.css
+++ b/css/main.css
@@ -3350,10 +3350,9 @@ div.scrollingHotSpotLeftVisible {
     margin-bottom: 17px;
     line-height: 18px;
     text-align: left;
-    pointer-events: none !important;
-    color: #fff !important;
-    cursor: default !important;
-    text-decoration: none !important; }
+    -webkit-text-fill-color: white;
+    -webkit-opacity: 1;
+    color: white; }
   .quality-sertification .button {
     margin-top: 20px;
     width: 100%; }
